--- a/views/festival/edit-festival.ejs
+++ b/views/festival/edit-festival.ejs
@@ -23,6 +23,10 @@
 
       <label for="socialMedia">Social Media:</label>
       <input type="text" name="socialMedia" value="<%= festivalToEdit.socialMedia %>">
+
+      <label>
+        <input type="file" name="imageUrl" accept="image/png, image/jpg">
+      </label>
       
       <button type="submit">Edit festival</button>
       </form>
