--- a/views/search-result.ejs
+++ b/views/search-result.ejs
@@ -1,4 +1,4 @@
-<h1>Search Result Page</h1>
+<h1>Search Results Page</h1>
 <% allFestivals.forEach(oneFestival => { %>
     <h3><%-oneFestival.name%></h3>
 <% }) %>
