--- a/views/profile/edit-profile.ejs
+++ b/views/profile/edit-profile.ejs
@@ -4,7 +4,7 @@
     <h2>Welcome, <%= profileToEdit.username %>!</h2>
     <p>This is your profile page my friend!</p>
     <button> <a href="./edit-profile">Reload the page</a> </button>
-    <form id="userForm" action="/profile/profile-edited" method="POST">
+    <form id="userForm" action="/profile/profile-edited" method="POST" enctype="multipart/form-data">
       <label for="name">Name:</label>
       <input type="text" name="name" value="<%= profileToEdit.name %>">
       <label for="surname">Surname:</label>
@@ -15,6 +15,9 @@
       <input type="text"  name="country" value="<%= profileToEdit.country %>">
       <label for="email">Email:</label>
       <input type="email" name="email" value="<%= profileToEdit.email %>">
+      <label>
+        <input type="file" name="imageUrl" accept="image/png, image/jpg">
+      </label>
       <button type="submit">Edit profile</button>
     </form>
   </div>
